eval_outputs/diff_and_source_code/code_change_and_test_change/second/google/27_B_Model/refined_instruction.log
=== RETURN CODE: 1 ===

=== STDOUT ===
SyntaxError: /Users/johndennehy/Documents/Coding/devops-atu-disruptive-devops-assignment/app/e2e/refined_instruction.spec.ts: Unterminated template. (11:3)

   9 |   await expect(page.getByText("11 / 5000")).toBeVisible();
  10 | });
> 11 | ```
     |    ^

   at refined_instruction.spec.ts:11

   9 |   await expect(page.getByText("11 / 5000")).toBeVisible();
  10 | });
> 11 | ```
     |   ^

Error: No tests found.
Make sure that arguments are regular expressions matching test files.
You may need to escape symbols like "$" or "*" and quote the arguments.

[1A[2K

=== STDERR ===

